--- a/app/app.css
+++ b/app/app.css
@@ -13,3 +13,72 @@ body {
     color-scheme: dark;
   }
 }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 1s ease;
+}
+
+@keyframes slideUp {
+  from {
+    opacity: 0;
+    transform: translateY(60px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-slideUp {
+  animation: slideUp 1.5s ease;
+}
+
+@keyframes zoom {
+
+from{
+transform:scale(0.8);
+opacity:0;
+}
+
+to{
+transform:scale(1);
+opacity:1;
+}
+
+}
+
+.animate-zoom{
+
+animation:zoom 1.2s ease;
+
+}
+
+
+.skill{
+
+background:white;
+color:black;
+padding:8px 16px;
+border-radius:30px;
+box-shadow:0 5px 15px rgba(0,0,0,0.3);
+transition:0.3s;
+
+}
+
+.skill:hover{
+
+transform:translateY(-5px);
+background:#3b82f6;
+color:white;
+
+}
